--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@mswjs/data": "^0.8.4",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.2",
+    "@types/react-redux": "^7.1.24",
     "classnames": "^2.2.6",
     "date-fns": "^2.12.0",
     "faker": "^4.1.0",
@@ -20,7 +24,11 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4",
     "seedrandom": "^3.0.5",
-    "txtgen": "^2.2.4"
+    "txtgen": "^2.2.4",
+    "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,9 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "prettier": "^2.0.2"
   },
   "msw": {
     "workerDirectory": "public"
